--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body {
 
   font: 100%/1.5 system-ui;
   max-width: 100ch;      
-  margin-inline: auto; 
+  margin-inline: max(1em, (100% - 100ch) / 2); 
   padding-inline: 1rem;   
 }
