--- a/style.css
+++ b/style.css
@@ -1,7 +1,29 @@
 body {
-
   font: 100%/1.5 system-ui;
-  max-width: 100ch;      
-  margin-inline: max(1em, (100% - 100ch) / 2); 
-  padding-inline: 1rem;   
+  max-width: 100ch;
+  margin-inline: max(1em, (100% - 100ch) / 2);
+  padding-inline: 1rem;
+}
+
+nav ul,
+nav li {
+  display: contents;
+}
+
+nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+nav a {
+  text-decoration: none;
+  color: #5e2b97;
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
+nav a.current {
+  color: black;
 }
