--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav a {
 nav a.current {
   border-bottom-width: 0.4em;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200); /* Cool gray */
+  border-bottom-color: var(--color-accent);
   padding-bottom: 0.1em; /* Slight padding to reduce visual jump */
 }
 
