--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@ html {
 }
 
 
-html {
-  color-scheme: light dark;
-}
-
-
 body {
   font: 100%/1.5 system-ui;
   max-width: 100ch;
@@ -164,8 +159,6 @@ body {
   max-width: 100ch;
   margin-inline: max(1em, (100% - 100ch) / 2);
   padding-inline: 1rem;
-  background-color: #fff;
-  color: #111;
 }
 
 h1 {
@@ -240,6 +233,15 @@ img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
+}
+
+/* Theme switcher styles */
+.color-scheme {
+  position: fixed;
+  top: 1em;
+  right: 1em;
+  background: transparent;
+  padding: 0.5em;
 }
 
 
