--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ nav a {
   color: inherit;
   padding: 0.5em;
   flex: 1;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav a.current {
@@ -243,6 +248,8 @@ img {
   background: transparent;
   padding: 0.5em;
 }
+
+
 
 
 
