--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   }
 
   .color-scheme {
-    position: fixed;
+    position: absolute;
     top: 1rem;
     right: 1rem;
     font-size: 1rem;
