--- a/style.css
+++ b/style.css
@@ -225,9 +225,14 @@ article header {
   margin-bottom: 0.3em;
 }
 
-article p {
-  margin: 0.25em 0;
+.projects article h2 {
+  margin-bottom: 1rem; 
+  padding-bottom: 1.5rem;
+  border-bottom: 2px solid #ccc;
+  line-height: 1.3;
 }
+
+
 
 ul {
   padding-left: 1.25rem;
