--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ img {
 #profile-stats dt {
   font-weight: 600;
   font-size: 0.9em;
-  color: #667085; /* subtle gray */
+  color: #667085;
   text-transform: uppercase;
   grid-row: 1;
 }
