--- a/style.css
+++ b/style.css
@@ -348,10 +348,32 @@ img {
 
 #projects-pie-plot {
   display: block;
-  margin: 15em auto 0em auto; /* Top auto bottom auto */
+  margin: 2em auto 1em auto;
   max-width: 20em;
   overflow: visible;
 }
+
+.legend {
+  max-width: 40em;
+  margin: 2em auto;
+  padding: 1em;
+}
+
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.swatch {
+  width: 1em;
+  height: 1em;
+  background-color: var(--color);
+  border-radius: 0.25em;
+  display: inline-block;
+}
+
 
 
 
