--- a/style.css
+++ b/style.css
@@ -390,6 +390,20 @@ img {
   margin-bottom: 2em;
 }
 
+.searchBar {
+  width: 100%;
+  max-width: 30rem;
+  margin: 2em auto;
+  display: block;
+  padding: 0.6em 1em;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.5em;
+  background-color: white;
+  color: black;
+}
+
+
 
 
 
