--- a/style.css
+++ b/style.css
@@ -232,6 +232,17 @@ article header {
   line-height: 1.3;
 }
 
+.projects a {
+  color:  rgb(74, 4, 74); /* or whatever color you want */
+  text-decoration: none;
+}
+
+.projects a:hover {
+  color:  rgb(74, 4, 74); /* hover color */
+  text-decoration: underline;
+}
+
+
 
 
 ul {
