--- a/style.css
+++ b/style.css
@@ -663,6 +663,56 @@ dl.info[hidden]:not(:hover, :focus-within) {
 }
 
 
+#commit-filter {
+  display: flex;
+  align-items: baseline;
+  gap: 0.5rem;
+  margin: 1rem 0;
+}
+
+#selectedTime {
+  margin-left: auto;
+  font-weight: 500;
+}
+
+
+circle {
+  transition: all 200ms, r calc(var(--r) * 100ms);
+}
+
+circle {
+  @starting-style {
+    r: 0;
+  }
+}
+
+
+.files {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 0.25em 2em;
+}
+
+.files > div {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.files dt {
+  grid-column: 1;
+  font-weight: bold;
+}
+
+.files dd {
+  grid-column: 2;
+  margin: 0;
+}
+
+
+
+
+
 
 
 
