--- a/style.css
+++ b/style.css
@@ -701,13 +701,27 @@ circle {
 
 .files dt {
   grid-column: 1;
-  font-weight: bold;
 }
 
 .files dd {
   grid-column: 2;
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  align-content: start;
+  gap: 0.15em;
+  padding-top: 0.6em;
+  margin-left: 0;
 }
+
+.line {
+  display: flex;
+  width: 0.5em;
+  aspect-ratio: 1;
+  background: steelblue;
+  border-radius: 50%;
+}
+
 
 
 
