--- a/style.css
+++ b/style.css
@@ -729,7 +729,7 @@ circle {
 }
 
 #scrollytelling {
-  grid-column: 1 / -1;
+  grid-column: 1;
   display: grid;
   grid-template-columns: subgrid;
 }
