--- a/style.css
+++ b/style.css
@@ -773,6 +773,29 @@ circle {
 
 
 
+#scrolly-1 {
+  display: flex;
+  gap: 1rem;
+}
+
+#scatter-story {
+  flex: 1;
+}
+
+#scatter-plot {
+  flex: 1;
+  position: sticky;
+  top: 0;
+  height: 80vh;
+}
+
+.step {
+  padding-bottom: 6rem;
+  font-size: 1rem;
+}
+
+
+
 
 
 
